# production-code-lesson

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  notes.txt  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: main.yaml
config/: variables.py
notebooks/: iris.ipynb
scripts/: entrypoint.sh
src/: app.py  evaluate.py  pipeline.py  preprocessing.py  train.py
tests/: test_app.py  test_case.json  test_inference.py
